# Gemini-Loom

./: .gitignore  README.md  pyproject.toml
loom/: cli.py  hook_writer.py  profiler.py  state.py  watchdog.py
tests/: test_watchdog.py
