[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-loom"
version = "0.1.0"
description = "A stateful wrapper for Google Gemini CLI that prevents infinite thinking loops and rotates OAuth accounts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gemini-loom = "loom.cli:main"

[tool.setuptools]
packages = ["loom"]